DuPont DevSB/src/objects/pse__Missing_Timecard__c.object
<CustomObject>
    <customHelpPage>pse__MissingTimecardHelp</customHelpPage>
    <description>Indicates that a resource has not entered a timecard for a certain week. You can calculate missing timecards for a region, practice, or group and configure the criteria on which calculations are based. Missing timecards have a lookup relationship to resources.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Date_Timecard_Entered__c</fullName>
        <inlineHelpText>The date and time the timecard was entered</inlineHelpText>
        <label>Date Timecard Entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <inlineHelpText>The week ending date that missing timecards are checked against.</inlineHelpText>
        <label>Week End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Include_Sublevels__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to calculate Missing Timecard for all sub levels of the selected region, practice, or group. This field is ignored if Missing TImecard is calculated only for a resource.</inlineHelpText>
        <label>Include Sublevels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Missing Timecards</relationshipLabel>
        <relationshipName>Missing_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <inlineHelpText>The start of the week that corresponds to the end date.</inlineHelpText>
        <label>Week Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Missing Timecard</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Start_Date__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Date_Timecard_Entered__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>pse__Include_Sublevels__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Missing Timecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Missing Timecards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>